--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,14 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Cloudflare Turnstile
+TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
+
+# Analytics / Pixels
+GA_MEASUREMENT_ID=
+META_PIXEL_ID=
+META_APP_ID=
+META_APP_SECRET=
+META_ACCESS_TOKEN=
