--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "php": "^8.2",
         "aws/aws-sdk-php": "^3.363",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "stripe/stripe-php": "^19.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
